# Setup-Django-Docker-

./: README.md  docker-compose.yml  pyproject.toml
authentication/: serializers.py  urls.py  views.py
nginx/: default.conf
server/: settings.py  urls.py
users/: models.py  views.py
users/migrations/: 0001_initial.py
users/tests/: test_view.py
